@@ -1156,3 +1156,4 @@ Put back support for installing Joomla 1.0 series versions.
 Updated the Horde Passwd script installer to h3-3.1.1, and Plans to 8.0.5.
 If Postfix relay domains are stored in a hash, update it instead of adding to relay_domains in /etc/postfix/main.cf.
 Additional allowed MySQL client hosts are now included in backups.
+Added a warning to the configuration check for systems behind a NAT gateway with an incorrectly configured DNS IP address.
